# job-hunter-ai

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml  render.yaml
crates/agents/: Cargo.toml
crates/agents/src/: Proveedor-Local.txt  enricher.rs  lib.rs  scraper.rs
crates/agents/src/analyzer/: mod.rs  providers.rs  rlm.rs  tools.rs  types.rs
crates/agents/src/scrapers/: arbeitnow.rs  dynamic.rs  extra_scrapers.rs  himalayas.rs  jobspresso.rs  mod.rs  remoteok.rs  weworkremotely.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/llm/: Cargo.toml
crates/llm/src/: lib.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator/src/: lib.rs  orchestrator.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
crates/ui/: Cargo.toml
crates/ui/src/: lib.rs
src/: config.rs  main.rs
src/adapters/http/: dto.rs  error.rs  handlers.rs  mod.rs  openapi.rs  ws.rs
web/: index.html
web/assets/: api.js  app.css  app.js  config.js  state.js  store.js  styles.css  ui.js  utils.js  ws.js
