[package]
name = "job-hunter-agents"
version = "0.1.0"
edition = "2021"

[dependencies]
job-hunter-core = { path = "../core" }
reqwest = { workspace = true }
scraper = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rig-core = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }
tokio = { workspace = true }
regex = "1.10" # <-- NUEVO: Para la herramienta 'grep' del RLM