[package]
name = "job-hunter-core"
version = "0.1.0"
edition = "2021"

[dependencies]
rkyv = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }